--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
 <head>
     <meta charset="utf-8">
     <title>React App Setup</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="public/custom.css">
 </head>
 
 <body>
